--- a/index.html
+++ b/index.html
@@ -372,7 +372,8 @@
     
     window.resetAllGame = function() { if(confirm("전체 초기화하시겠습니까?")) gameRef.remove().then(() => location.reload()); }
     function fillTestNumbers() { for(let i=0; i<25; i++) { document.getElementById(`input_cell_${i}`).value = "키워드_" + (i + 1); }}
-    function pickRandomTopic() { gameRef.child('subject').set(["프로젝트 키워드", "점심 메뉴", "IT 용어", "나라 이름"][Math.floor(Math.random()*4)]); }
+    function pickRandomTopic() { gameRef.child('subject').set(["드라마", "과일", "나라이름", "우리나라 도시" "나라이름", "영화제목", "과자", "애니메이션", "두글자단어", "숫자", "알파벳", "색깔"][Math.floor(Math.random()*4)]); }
 </script>
 </body>
 </html>
+
