--- a/index.html
+++ b/index.html
@@ -371,9 +371,13 @@
     }
     
     window.resetAllGame = function() { if(confirm("전체 초기화하시겠습니까?")) gameRef.remove().then(() => location.reload()); }
-    function fillTestNumbers() { for(let i=0; i<25; i++) { document.getElementById(`input_cell_${i}`).value = "키워드_" + (i + 1); }}
-    function pickRandomTopic() { gameRef.child('subject').set(["드라마", "과일", "나라이름", "우리나라 도시" "나라이름", "영화제목", "과자", "애니메이션", "두글자단어", "숫자", "알파벳", "색깔"][Math.floor(Math.random()*4)]); }
+    function pickRandomTopic() { 
+    const topics = ["드라마", "과일", "나라이름", "우리나라 도시", "영화제목", "과자", "애니메이션", "두글자단어", "숫자", "알파벳", "색깔"];
+    const randomTopic = topics[Math.floor(Math.random() * topics.length)];
+    gameRef.child('subject').set(randomTopic); 
+}
 </script>
 </body>
 </html>
+
 
