--- a/index.html
+++ b/index.html
@@ -372,6 +372,14 @@
 
     
     window.resetAllGame = function() { if(confirm("전체 초기화하시겠습니까?")) gameRef.remove().then(() => location.reload()); }
+
+    // 🔥 [이 부분이 사라졌었습니다!] 자동 입력 함수 다시 추가
+    function fillTestNumbers() { 
+        for(let i=0; i<25; i++) { 
+            const input = document.getElementById(`input_cell_${i}`);
+            if(input) input.value = "키워드_" + (i + 1); 
+        }
+        
  // 기존의 마지막 함수를 아래와 같이 수정 (쉼표 추가 및 범위 수정)
 function pickRandomTopic() { 
     const topics = ["드라마", "과일", "나라이름", "우리나라 도시", "영화제목", "과자", "애니메이션", "두글자단어", "숫자", "알파벳", "색깔"];
@@ -381,6 +389,8 @@ function pickRandomTopic() {
 </script>
 </body>
 </html>
+
+
 
 
 
